Neon: release B11.7 (LogicSugar 2.1.2 dynamic call-args hint)